--- a/_data/messages.yml
+++ b/_data/messages.yml
@@ -52,7 +52,7 @@ en:
   rightNavigationButtons:
    - {permalink: "https://www.eventbrite.cl/e/latinr-2021-conferencia-latinoamericana-sobre-uso-de-r-en-id-tickets-198379276757", text: "Register here!"}
   heroButtons:
-   - {permalink: "https://easychair.org/cfp/latinr2022", text: "Call for Papers: submit until July 27!"}
+   #- {permalink: "https://easychair.org/cfp/latinr2022", text: "Call for Papers: submit until July 27!"}
    #- {permalink: "/schedule", text: "Schedule"}
    - {permalink: "https://www.youtube.com/LatinR", text: "YouTube Streaming"}
   # - {permalink: "https://www.eventbrite.cl/e/latinr-2021-conferencia-latinoamericana-sobre-uso-de-r-en-id-tickets-198379276757", text: "Register here!"}
@@ -146,7 +146,7 @@ es:
   rightNavigationButtons:
    - {permalink: "https://www.eventbrite.cl/e/latinr-2021-conferencia-latinoamericana-sobre-uso-de-r-en-id-tickets-198379276757", text: "Registrate acá!"}
   heroButtons:
-   - {permalink: "https://easychair.org/cfp/latinr2022", text: "Convocatoria a presentar trabajos: hasta 27 de julio!"}
+   #- {permalink: "https://easychair.org/cfp/latinr2022", text: "Convocatoria a presentar trabajos: hasta 27 de julio!"}
    #- {permalink: "/cronograma", text: "Cronograma"}
    - {permalink: "https://www.youtube.com/LatinR", text: "Streaming a YouTube"}
    #- {permalink: "https://www.eventbrite.cl/e/latinr-2021-conferencia-latinoamericana-sobre-uso-de-r-en-id-tickets-198379276757", text: "Registrate acá!"}
@@ -249,7 +249,7 @@ pt:
   rightNavigationButtons:
    - {permalink: "https://www.eventbrite.cl/e/latinr-2021-conferencia-latinoamericana-sobre-uso-de-r-en-id-tickets-198379276757", text: "Assine aqui!"}
   heroButtons:
-   - {permalink: "https://easychair.org/cfp/latinr2022", text: "Chamada de trabalhos: até 27 de julho!"}
+   #- {permalink: "https://easychair.org/cfp/latinr2022", text: "Chamada de trabalhos: até 27 de julho!"}
    #- {permalink: "/programacao", text: "Programação"}
    - {permalink: "https://www.youtube.com/LatinR", text: "YouTube Streaming"}
    #- {permalink: "https://www.eventbrite.cl/e/latinr-2021-conferencia-latinoamericana-sobre-uso-de-r-en-id-tickets-198379276757", text: "Assine aqui!"}
