--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -107,18 +107,17 @@
   name: "María"
   surname: "Ramos"
 -
-  id:
-  name: ""
-  surname: ""
+  id: 28
+  name: "Renzo"
+  surname: "Caceres Rossi"
+
 -
-  id:
-  name: ""
-  surname: ""
+  id: 29
+  name: "Alisson"
+  surname: "Soares"  
+
 -
-  id:
-  name: ""
-  surname: ""
--
-  id:
-  name: ""
-  surname: ""
+  id: 30
+  name: "Kamil"
+  surname: "Żyła"    
+ 
