--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -120,4 +120,14 @@
   id: 30
   name: "Kamil"
   surname: "Żyła"    
+  
+-
+  id: 31
+  name: "Macarena"
+  surname: "Quiroga"   
+  
+-
+  id: 32
+  name: "Ángela"
+  surname: "Sanzo"      
  
