--- a/_data/messages.yml
+++ b/_data/messages.yml
@@ -48,14 +48,17 @@ en:
    - {permalink: "/previous-editions", text: "Previous Editions"}
 
   bottomNavigationLinks:
+   - {permalink: "https://www.eventbrite.cl/e/latinr-2022-conferencia-latinoamericana-sobre-uso-de-r-en-id-tickets-431621390197?utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing&utm-source=cp&aff=escb", text: "Register here!"}
    - {permalink: "http://bit.ly/latinr_slack", text: "Join us on Slack"}
+   
   rightNavigationButtons:
+   - {permalink: "https://www.eventbrite.cl/e/latinr-2022-conferencia-latinoamericana-sobre-uso-de-r-en-id-tickets-431621390197?utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing&utm-source=cp&aff=escb", text: "Register here!"}
    - {permalink: "http://bit.ly/latinr_slack", text: "Join us on Slack"}
   heroButtons:
    #- {permalink: "https://easychair.org/cfp/latinr2022", text: "Call for Papers: submit until July 27!"}
    #- {permalink: "/schedule", text: "Schedule"}
    - {permalink: "https://www.youtube.com/LatinR", text: "YouTube Streaming"}
-  # - {permalink: "https://www.eventbrite.cl/e/latinr-2021-conferencia-latinoamericana-sobre-uso-de-r-en-id-tickets-198379276757", text: "Register here!"}
+   - {permalink: "https://www.eventbrite.cl/e/latinr-2022-conferencia-latinoamericana-sobre-uso-de-r-en-id-tickets-431621390197?utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing&utm-source=cp&aff=escb", text: "Register here!"}
 
   #aboutJAIIO: 'We are part of <a href = "http://47jaiio.sadio.org.ar/">47 JAIIO</a>, organised by <a href = "http://www.sadio.org.ar/">SADIO</a> and <a href = "http://www.palermo.edu/">UP</a>.'
   aboutBlock:
@@ -143,13 +146,17 @@ es:
    - {permalink: "/ediciones-anteriores/", text: "Ediciones Anteriores"}
   bottomNavigationLinks:
    - {permalink: "http://bit.ly/latinr_slack", text: "Únete en Slack"}  
+   - {permalink: "https://www.eventbrite.cl/e/latinr-2022-conferencia-latinoamericana-sobre-uso-de-r-en-id-tickets-431621390197?utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing&utm-source=cp&aff=escb", text: "Registrate acá!"}
+   
   rightNavigationButtons:
    - {permalink: "http://bit.ly/latinr_slack", text: "Únete en Slack"}  
+   - {permalink: "https://www.eventbrite.cl/e/latinr-2022-conferencia-latinoamericana-sobre-uso-de-r-en-id-tickets-431621390197?utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing&utm-source=cp&aff=escb", text: "Registrate acá!"}
+   
   heroButtons:
    #- {permalink: "https://easychair.org/cfp/latinr2022", text: "Convocatoria a presentar trabajos: hasta 27 de julio!"}
    #- {permalink: "/cronograma", text: "Cronograma"}
    - {permalink: "https://www.youtube.com/LatinR", text: "Streaming a YouTube"}
-   #- {permalink: "https://www.eventbrite.cl/e/latinr-2021-conferencia-latinoamericana-sobre-uso-de-r-en-id-tickets-198379276757", text: "Registrate acá!"}
+   - {permalink: "https://www.eventbrite.cl/e/latinr-2022-conferencia-latinoamericana-sobre-uso-de-r-en-id-tickets-431621390197?utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing&utm-source=cp&aff=escb", text: "Registrate acá!"}
 
   # about
   # aboutJAIIO: 'Somos parte de las <a href = "http://47jaiio.sadio.org.ar/">47 JAIIO</a>, organizadas por <a href = "http://www.sadio.org.ar/">SADIO</a> y co-organizadas por <a href = "http://www.palermo.edu/">UP</a>.'
@@ -245,14 +252,18 @@ pt:
    - {permalink: "/edicoes-anteriores", text: "Edições anteriores"}
 
   bottomNavigationLinks:
-   - {permalink: "http://bit.ly/latinr_slack", text: "Acesse o Slack"} 
+   - {permalink: "http://bit.ly/latinr_slack", text: "Acesse o Slack"}
+   - {permalink: "https://www.eventbrite.cl/e/latinr-2022-conferencia-latinoamericana-sobre-uso-de-r-en-id-tickets-431621390197?utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing&utm-source=cp&aff=escb", text: "Inscreva-se!"}
+
   rightNavigationButtons:
    - {permalink: "http://bit.ly/latinr_slack", text: "Acesse o Slack"}  
+   - {permalink: "https://www.eventbrite.cl/e/latinr-2022-conferencia-latinoamericana-sobre-uso-de-r-en-id-tickets-431621390197?utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing&utm-source=cp&aff=escb", text: "Inscreva-se!"}
+
   heroButtons:
    #- {permalink: "https://easychair.org/cfp/latinr2022", text: "Chamada de trabalhos: até 27 de julho!"}
    #- {permalink: "/programacao", text: "Programação"}
    - {permalink: "https://www.youtube.com/LatinR", text: "YouTube Streaming"}
-   #- {permalink: "https://www.eventbrite.cl/e/latinr-2021-conferencia-latinoamericana-sobre-uso-de-r-en-id-tickets-198379276757", text: "Assine aqui!"}
+   - {permalink: "https://www.eventbrite.cl/e/latinr-2022-conferencia-latinoamericana-sobre-uso-de-r-en-id-tickets-431621390197?utm-campaign=social&utm-content=attendeeshare&utm-medium=discovery&utm-term=listing&utm-source=cp&aff=escb", text: "Inscreva-se!"}
 
   # aboutJAIIO: 'Somos parte da <a href = "http://47jaiio.sadio.org.ar/">47 JAIIO</a>, organizado por <a href = "http://www.sadio.org.ar/">SADIO</a> e <a href = "http://www.palermo.edu/">UP</a>.'
   aboutBlock:
